# wind-bot

./: Makefile  README.md  pyproject.toml
wind_bot/engine/: .telegram_api.py.swp  diagram.py  openweather_api.py  telegram_api.py
wind_bot/scripts/: wind_bot.py
