[tool.poetry]
name = "wind-bot"
version = "0.1.0"
description = "Simple application for forecast of wind. Telegram Bot sends the diagram of the forecast to a chat"
authors = ["Maxim Zeyfert <zeyfert.m@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
matplotlib = "^3.3.2"
requests = "^2.24.0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
